# Explicit-FRI

./: .gitignore  .gitmodules  README.md
Client_Applications/basic_app/src/: CMakeLists.txt  MyLBRClient.cpp  MyLBRClient.h
Client_Applications/cartIC_app/src/: CMakeLists.txt  MyLBRClient.cpp  MyLBRClient.h
Client_Applications/cs_app/data/: kin_stiff_test1.csv
Client_Applications/cs_app/src/: MyLBRClient.cpp  MyLBRClient.h
Client_Applications/cs_app_old/: error
Client_Applications/cs_app_old/src/: CMakeLists.txt  MyLBRApp.cpp  MyLBRClient.cpp  my_diff_jacobians.cpp  my_diff_jacobians.h
Client_Applications/gimbal_app/prints/: File_Fext
Client_Applications/gimbal_app/prints/Acquisitions/Subject_Alex/: t1_fe  t1_gl  t1_ul  t1_wo  t2_fe  t2_gl  t2_ul  t2_wo  t3_fe  t3_gl  t3_ul  t3_wo
Client_Applications/gimbal_app/prints/Acquisitions/Subject_Dom/: t1_fe  t1_gl  t1_ul  t1_wo  t2_fe  t2_gl  t2_ul  t2_wo  t3_fe  t3_gl  t3_ul  t3_wo
Client_Applications/gimbal_app/prints/Acquisitions/Subject_Eric/: t1_fe  t1_gl  t1_ul  t1_wo  t2_fe  t2_gl  t2_ul  t2_wo  t3_fe  t3_gl  t3_wo
Client_Applications/gimbal_app/prints/Acquisitions/Subject_Kunpeng/: t1_fe  t1_gl  t1_ps  t1_ur  t1_wo  t2_fe  t2_gl  t2_ps  t2_ur  t2_wo  t3_fe  t3_gl  t3_ps  t3_ur  t3_wo  t4_fe  t4_gl  t4_ps  t4_ur  t4_wo  t5_gl  t5_ps  t5_ur  t5_wo
Client_Applications/gimbal_app/prints/Acquisitions/Subject_Stephan/: t1_w  t1_wo  t2_w  t2_wo  t3_w  t3_wo  t4_w  t4_wo  t5_w  t5_wo
Client_Applications/gimbal_app/src/: CMakeLists.txt  LBRJointSineOverlayApp.cpp  LBRJointSineOverlayClient.cpp  LBRJointSineOverlayClient.h  PlotUtils.h
Client_Applications/jla_app/src/: CMakeLists.txt  MyLBRClient.cpp  MyLBRClient.h
Libraries/myFRIClient/example/IOAccess/: IOAccessApp.cpp
Libraries/myFRIClient/example/LBRClientTemplate/: LBRClientTemplate
Libraries/myFRIClient/example/LBRWrenchSineOverlay/: LBRWrenchSineOverlay
Libraries/myFRIClient/example/TransformationProvider/: TransformationProvider
Libraries/myFRIClient/src/base/: friClientApplication.cpp
Libraries/myFRIClient/src/client_lbr/: friLBRClient.cpp
Libraries/myFRIClient/src/client_trafo/: friTransformationClient.cpp
